small fixes feb 18, 2025
